log/build_2025-08-14_21-53-53/cpp_package/stdout_stderr.log
[ 10%] Building CXX object CMakeFiles/path_planner_node.dir/src/path_planner_node.cpp.o
[ 70%] Built target point_cloud_sweeper_cpp_node
[ 70%] Built target stable_ground_fitter_node
[ 70%] Built target user_centric_roi_detector
[ 80%] Building CXX object CMakeFiles/path_planner_3d_node.dir/src/path_planner_3d_node.cpp.o
/home/p/ros2_ws/src/cpp_package/src/path_planner_node.cpp: In constructor ‘PathPlannerNode::PathPlannerNode()’:
/home/p/ros2_ws/src/cpp_package/src/path_planner_node.cpp:25:49: error: ‘use_voxel_filter_’ was not declared in this scope
   25 |         this->get_parameter("use_voxel_filter", use_voxel_filter_);
      |                                                 ^~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp: In member function ‘void PathPlanner3DNode::publishMarkers(const std::vector<double, std::allocator<double> >&, const std_msgs::msg::Header&, int, double)’:
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp:154:101: warning: unused parameter ‘best_ray_idx’ [-Wunused-parameter]
  154 |     void publishMarkers(const std::vector<double>& depths, const std_msgs::msg::Header& header, int best_ray_idx, double smoothed_angle)
      |                                                                                                 ~~~~^~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp:154:122: warning: unused parameter ‘smoothed_angle’ [-Wunused-parameter]
  154 |     void publishMarkers(const std::vector<double>& depths, const std_msgs::msg::Header& header, int best_ray_idx, double smoothed_angle)
      |                                                                                                                   ~~~~~~~^~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/path_planner_node.cpp:27:48: error: ‘voxel_leaf_size_’ was not declared in this scope
   27 |         this->get_parameter("voxel_leaf_size", voxel_leaf_size_);
      |                                                ^~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/path_planner_node.cpp: In member function ‘void PathPlannerNode::pointCloudCallback(sensor_msgs::msg::PointCloud2_<std::allocator<void> >::SharedPtr)’:
/home/p/ros2_ws/src/cpp_package/src/path_planner_node.cpp:71:13: error: ‘use_voxel_filter_’ was not declared in this scope
   71 |         if (use_voxel_filter_) {
      |             ^~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/path_planner_node.cpp:74:29: error: ‘voxel_leaf_size_’ was not declared in this scope
   74 |             sor.setLeafSize(voxel_leaf_size_, voxel_leaf_size_, voxel_leaf_size_);
      |                             ^~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/path_planner_node.dir/build.make:76: CMakeFiles/path_planner_node.dir/src/path_planner_node.cpp.o] 오류 1
gmake[1]: *** [CMakeFiles/Makefile2:223: CMakeFiles/path_planner_node.dir/all] 오류 2
gmake[1]: *** 끝나지 않은 작업을 기다리고 있습니다....
[ 90%] Linking CXX executable path_planner_3d_node
[ 90%] Built target path_planner_3d_node
gmake: *** [Makefile:146: all] 오류 2
